src/test/deca/codegen/valid/intint_cont_01.deca
// Description:
//    Initialisation et typage
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   int x = 2;
   int int = x;
   println(int);
}
