src/test/deca/codegen/error/test_io_float_error.deca
// Description:
//    lecture eronné d'un float
//
// Resultats:
//    Error: Input/Output error
//
//
// Historique:
//    cree le 01/01/2023
{
    float x = readFloat();
    println(x);
}


